made the TestBundledPlugins test more readable (#496)